[package]
name = "fobserver"
version = "0.1.3"
edition = "2021"
authors = ["fob"]
repository = "https://github.com/Enrico-Fabbri/fobserver"
license = "MIT"
readme = "README.md"
description = "A lightweight and straightforward HTTP server library written in Rust"


[dependencies]
log = "0.4.22"
anyhow = "1.0.89"